--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/item_bank?characterEncoding=UT
 spring.datasource.username=root
 spring.datasource.password=no.123321
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+# 配置pageHelper分页插件的内容
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
